Implement complete endpoint
